Fixed overflow.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   font-family: "Ubuntu", sans-serif;
   text-align: center;
+  overflow-x: hidden;
 }
 
 img {
@@ -314,11 +315,6 @@ p {
 }
 
 /* Top & Bottom Section */
-.top-section,
-.bottom-section {
-  overflow-x: hidden;
-}
-
 .top-section section:first-of-type,
 .bottom-section section:first-of-type {
   margin-bottom: 3em;
